# Projet_IG

./: .gitignore  CMakeLists.txt  README.md
example/: bezier_curve.cpp  bezier_curve_poly.cpp  bezier_surface.cpp  bezier_surface_normals.cpp  bezier_surface_poly.cpp
src/: main.cpp
src/common/: defines.h
src/headers/: camera.h  shader.h
src/headers/bezier/curve/: bezier_curve.h  bezier_curve_control_polygon_mesh.h  bezier_curve_mesh.h
src/headers/bezier/surface/: bezier_surface.h  bezier_surface_control_polygon_mesh.h  bezier_surface_mesh.h  bezier_surface_normal_mesh.h
src/headers/light/: light.h  light_mesh.h
src/shaders/base/: fragment.fs
src/shaders/bezier_curve/: control_polygon_fragment.fs  curve_fragment.fs  vertex.vs
src/shaders/bezier_surface/: control_polygon_fragment.fs  normal_fragment.fs  surface_fragment.fs  vertex.vs
src/shaders/light/: fragment.fs  vertex.vs
